<resources>
    <string name="app_name">Cuida Tu Templo</string>
    <string name="menu_propiedades">Propiedades</string>
    <string name="menu_beneficios">Beneficios</string>
    <string name="menu_alimentos">Alimentos</string>
    <string name="menu_enfermedades">Recomendado para</string>
    <string name="menu_busqueda_avanzada">Búsqueda Avanzada</string>
    <string name="menu_acerca_de">Acerca de Cuida Tu Templo</string>
    <string name="menu_contacto">Contactános</string>
    <string name="action_settings">Configuración</string>
    <string name="navigation_drawer_open">Abrir barra lateral</string>
    <string name="navigation_drawer_close">Ocultar barra lateral</string>
    <string name="sin_imagen">Sin imagen disponible</string>
    <string name="nombre_alimento">Nombre de alimento</string>
    <string name="tipo_alimento">Tipo de alimento</string>
    <string name="info_alimento">Información del alimento</string>
    <string name="info">Info</string>
    <string name="searchHint">Buscar alimento…</string>
    <string name="infoSplash">La información sobre alimentos y hierbas aquí contenida debe ser utilizada principalmente como complemento. Consulte a su médico.</string>
    <string name="busqueda_1">¿Qué desea buscar?</string>
    <string name="busqueda_2">Criterio de búsqueda</string>
    <string name="busqueda_3">Buscar</string>
    <string name="busqueda_4">Escriba aquí lo que desea buscar…</string>
    <string name="enfermedades">Enfermedades / Dolencias</string>
    <string name="validacionBusqueda">Debe ingresar algo para buscar</string>
    <string name="validacionBusqueda_1">Debe seleccionar la opción que desea buscar</string>
    <string name="resultadosBusqueda">Resultados de la búsqueda</string>
    <string name="busqueda_sin_resultados">No se han encontrado resultados</string>
    <string name="acercaDe1">Creemos en que una buena alimentación y cuidado del cuerpo es fundamental hoy en día, principalmente por motivos de salud, más allá de lo estético.
                            \nY todo lo que es bueno a nuestro cuerpo se encuentra en la naturaleza: verduras, frutas, hierbas, especias, legumbres, semillas, etc.\nGran parte de las medicinas
                            para distintos tipos de problemas hacen uso de las propiedades de los alimentos naturales.\nEs por eso que esta aplicación se diseñó con el propósito de agrupar
                            y clasificar gran cantidad de alimentos especificando sus propiedades, beneficios y para qué sirven o para qué dolencias/enfermedades se pueden utilizar.</string>
    <string name="acercaDe2">El nombre <b>Cuida Tu Templo</b> tiene su origen en la Palabra de Dios. Existen muchas referencias en la Biblia en donde el cuerpo humano es comparado con un templo.
                            \nQuienes creen y aceptan a Jesús, reciben su Espíritu Santo, del cual el cuerpo es su templo, por lo que pasa a ser considerado santo. Si bien tenemos la libertad de elegir
                            cómo vamos a cuidar nuestro cuerpo, nuestro Creador espera que lo cuidemos y lo usemos de manera adecuada, porque fue hecho de manera maravillosa y formidable.</string>
    <string name="acercaDe3">Soy una creación maravillosa, y por eso te doy las gracias. Todo lo que haces es maravilloso, ¡de eso estoy bien seguro!\nSalmo 139:13"</string>
    <string name="contacto_1">Si querés enviarnos tus comentarios, sugerencias o pedidos de alimentos faltantes, completá el siguiente formulario:</string>
    <string name="contacto_2">Asunto</string>
    <string name="contacto_3">Comentarios</string>
    <string name="contacto_4">Enviar</string>
    <string name="validacionContacto">Debe ingresar algún comentario</string>
    <string name="mailContacto">Seleccione una aplicación de mail</string>
    <string name="contacto_5">Muchas gracias por enviarnos sus comentarios!</string>

    <string-array name="asunto">
        <item>Pedidos de alimentos faltantes</item>
        <item>Sugerencias</item>
        <item>Información errónea</item>
    </string-array>

</resources>
