<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagenAlimento"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:contentDescription="@string/sin_imagen"
            app:srcCompat="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/nombreAlimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/nombre_alimento"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tbAlimento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tabIndicatorColor="#1EFA28"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:id="@+id/tiInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info" />

            <android.support.design.widget.TabItem
                android:id="@+id/tiProp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_propiedades" />

            <android.support.design.widget.TabItem
                android:id="@+id/tiBeneficios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_beneficios" />

            <android.support.design.widget.TabItem
                android:id="@+id/tiEnfermedades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_enfermedades" />
        </android.support.design.widget.TabLayout>

        <FrameLayout
            android:id="@+id/frameTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>